--- a/style.css
+++ b/style.css
@@ -30,3 +30,21 @@ main{
     object-fit: cover;
 }
 
+.dropdown-submenu {
+    position: relative;
+  }
+  
+  .dropdown-submenu > .dropdown-menu {
+    top: 0;
+    left: 100%; /* Pindahkan submenu ke sebelah kanan */
+    margin-top: -1px;
+    display: none;
+  }
+  
+  .dropdown-submenu:hover > .dropdown-menu,
+  .dropdown-submenu:focus-within > .dropdown-menu {
+    display: block;
+  }
+.navbar .dropdown-toggle::after{
+    display: none;
+}  
