--- a/style.css
+++ b/style.css
@@ -64,9 +64,9 @@ body {
     background-image: url("css/ps.jpg");
 }
 .form-container {
-    max-width: 800px; /* Set a maximum width for the form */
-    margin: auto; /* Center the form horizontally */
+    max-width: 800px; 
+    margin: auto; 
     background-color: white;
-    padding: 20px; /* Add some padding */
-    border-radius: 10px; /* Optional: add rounded corners */
+    padding: 20px; 
+    border-radius: 10px; 
 }
