--- a/style.css
+++ b/style.css
@@ -7,28 +7,23 @@ main{
     height: 70px;
     
 }
-.c-item{
+.c-item img{
     height: 560px;
+    object-fit: cover;
 
 }
-.c-img{
-    height: 100%;
-    object-fit: cover;
-    filter: brightness(0.6);
-}
+
 .c-cap{
     position: absolute;
     top: 50%;
     text-align: center;
     font-size: 18px;
   }
-.card-item{
-    height: 403.8px;
+.card-item img{
+    height: 100%;
+    object-fit:cover;
 }
-.card-img{
-    height: 235.8px;
-    object-fit: cover;
-}
+
 
 .b-item{
     height: 100px;
@@ -43,30 +38,34 @@ main{
     position: relative;
   }
   
-  .dropdown-submenu > .dropdown-menu {
+.dropdown-submenu .dropdown-menu {
     top: 0;
     left: 100%;
     margin-top: -1px;
     display: none;
   }
   
-  .dropdown-submenu:hover > .dropdown-menu,
-  .dropdown-submenu:focus-within > .dropdown-menu {
+.dropdown-submenu:hover .dropdown-menu,
+.dropdown-submenu:focus-within .dropdown-menu {
     display: block;
-  }
+}
 .navbar .dropdown-toggle::after{
     display: none;
 }
 label {
     font-weight: bold;
 }
-body {
-    background-image: url("css/ps.jpg");
-}
 .form-container {
-    max-width: 800px; 
+    max-width: 1000px; 
     margin: auto; 
     background-color: white;
     padding: 20px; 
     border-radius: 10px; 
+}
+.form-grup{
+    border-radius: 10px;
+    padding: 20px;
+}
+.no-resize{
+    resize: none;
 }
