menambahkan k,akademik.html dan update yang lainnya

--- a/style.css
+++ b/style.css
@@ -69,3 +69,24 @@ label {
 .no-resize{
     resize: none;
 }
+footer {
+    background: url(Gambar/footer-bg.png);
+    color: #ff0000; /* Warna teks */
+  }
+  footer h5, footer h2 {
+    color: #ffffff;
+  }
+  footer div a {
+    color: #0011ff; /* Warna tautan */
+    text-decoration: none;  
+  }
+  footer a:hover {
+    color: #ff0000; /* Warna saat hover */
+    text-decoration: none;
+  }
+  footer p {
+    color: #ffffff; /* Warna teks umum di footer */
+  }
+
+
+
