--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ footer{
 footer p,
 footer a,
 footer h5,
+footer h2,
 footer i{
   text-decoration: none;
   color: white;
@@ -84,4 +85,7 @@ footer a:hover{
 }
 .share-buttons a{
   text-decoration: none;
+}
+.highlight{
+  color: red;
 }
