Update IF.html & TI.html

--- a/style.css
+++ b/style.css
@@ -89,3 +89,20 @@ footer a:hover{
 .highlight{
   color: red;
 }
+
+  #teknikIndustri {
+    scroll-margin-top: 86px; 
+  }
+  #INFORMATIKA {
+    scroll-margin-top: 86px;
+  }
+.alumni-img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+  }
+ .bordered {
+    border-bottom: 1px solid #ddd; 
+    padding-bottom: 15px; 
+    margin-bottom: 15px;
+ }
